# the-tag

./: .gitignore  CMakeLists.txt  README.md  VERSION  convert_image.py  prj.conf  prj_sysbuild.conf  read_serial.py  release.conf  west.yml
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
boards/arm/the_tag/: board.yml  the_tag_nrf54l15_cpuapp.dts  the_tag_nrf54l15_cpuapp.yaml
firmware/: .gitignore  CMakeLists.txt  Kconfig  README.md  debug.conf  prj.conf  sysbuild.conf  west.yml
firmware/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
firmware/boards/arm/the_tag/: Kconfig.the_tag  the_tag_nrf54l15_cpuapp_defconfig
firmware/src/: ble_audio_service.c  ble_audio_service.h  ble_backend.c  ble_image_service.c  ble_image_service.h  fast_pair_service.c  fast_pair_service.h  find_my.c  find_my.h  main.c  mic_driver.c  mic_driver.h
mobile_app/: README.md  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/cpp/: CMakeLists.txt  lc3_decoder_bridge.c
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: audio_tab.dart  main.dart
mobile_app/lib/models/: device_type.dart
mobile_app/lib/pages/: find_my_device_page.dart
mobile_app/lib/services/: ble_audio_service.dart  ble_image_transfer.dart  find_my_device_service.dart  image_converter.dart  lc3_decoder.dart  omiglass_protocol.dart
mobile_app/linux/: CMakeLists.txt
mobile_app/linux/runner/: my_application.cc
mobile_app/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile_app/macos/Runner.xcodeproj/: project.pbxproj
mobile_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile_app/macos/Runner/Configs/: AppInfo.xcconfig
mobile_app/test/: find_my_device_test.dart  widget_test.dart
mobile_app/web/: index.html  manifest.json
mobile_app/windows/: CMakeLists.txt
mobile_app/windows/runner/: Runner.rc  main.cpp
src/: ble_backend.c  ble_backend.h  draw_test.c  image_boaviet.h  jd79661_driver.c  jd79661_driver.h  jd79661_test.c  main.c  simple_test.c
(+1 files in other folders)
